# topocalc

./: pyproject.toml  setup.cfg  setup.py
topocalc/core_c/: topo_core.c
